# atsam3xa

./: .gitignore  Cargo.toml  README.md  generate.sh
boards/arduino_due/: Cargo.toml  Makefile.toml  README.md  build.rs  memory_sam3_4.x
boards/arduino_due/.cargo/: config
boards/arduino_due/examples/: blinky_basic.rs  serial.rs
boards/arduino_due/src/: lib.rs
hal/: Cargo.toml  LICENSE-BSD0  LICENSE-MIT  README.md  build.sh
hal/src/: bus.rs  clock.rs  delay.rs  flash.rs  gpio.rs  lib.rs  prelude.rs  watchdog.rs
hal/src/comm/: mod.rs  uart.rs
hal/src/uotghs/: mod.rs  pipe.rs
pac/atsam3a4c/: Cargo.toml  README.md  device.x
pac/atsam3a4c/src/: lib.rs
pac/atsam3a4c/src/can0/: mmr6.rs
pac/atsam3a4c/src/dmac/: ctrlb3.rs  daddr4.rs  daddr5.rs  last.rs
pac/atsam3a4c/src/matrix/: matrix_pras3.rs  matrix_pras5.rs  matrix_pras6.rs  matrix_pras7.rs
pac/atsam3a4c/src/pioa/: scdr.rs
pac/atsam3a4c/src/pmc/: pmc_fsmr.rs  pmc_fspr.rs  pmc_wpmr.rs
pac/atsam3a4c/src/pwm/: clk.rs  cmpm3.rs  cmpm7.rs  cmr1.rs
pac/atsam3a4c/src/ssc/: rc0r.rs
pac/atsam3a4c/src/twi0/: thr.rs
pac/atsam3a4c/src/uotghs/: devdmaaddress5.rs  devdmanxtdsc3.rs  hstdmacontrol5.rs  hstdmastatus1.rs
pac/atsam3a8c/: Cargo.toml  README.md
pac/atsam3a8c/src/: generic.rs  lib.rs
pac/atsam3a8c/src/adc/: emr.rs
pac/atsam3a8c/src/can0/: mdh5.rs  mmr2.rs  mmr5.rs
pac/atsam3a8c/src/hsmci/: cstor.rs
pac/atsam3a8c/src/matrix/: matrix_pras2.rs
pac/atsam3a8c/src/pwm/: cdty7.rs  cmr7.rs  cprd3.rs  scup.rs
pac/atsam3a8c/src/rtc/: calr.rs  wpmr.rs
pac/atsam3a8c/src/rtt/: mr.rs
pac/atsam3a8c/src/ssc/: rc1r.rs  rcmr.rs
pac/atsam3a8c/src/supc/: wumr.rs
pac/atsam3a8c/src/tc1/: rc1.rs
pac/atsam3a8c/src/uotghs/: devdmacontrol2.rs  devdmacontrol4.rs  devdmanxtdsc6.rs  devdmanxtdsc7.rs  devdmastatus3.rs  hstdmaaddress3.rs  hstdmacontrol4.rs  hstpipcfg0_hsbohscp.rs
pac/atsam3x4c/: Cargo.toml  README.md
pac/atsam3x4c/src/: lib.rs
pac/atsam3x4c/src/can0/: br.rs  mdh6.rs  mdl6.rs  mid0.rs  mr.rs  wpmr.rs
pac/atsam3x4c/src/can1/: mam3.rs  mam4.rs  mdh3.rs  mdh4.rs  mdl1.rs  mdl3.rs  mid5.rs  mid7.rs  mmr1.rs
pac/atsam3x4c/src/dmac/: cfg2.rs  ctrla1.rs  ctrla2.rs  ctrla4.rs  ctrlb1.rs  ctrlb2.rs  daddr2.rs  dscr0.rs  dscr5.rs  saddr0.rs  saddr1.rs  saddr3.rs  saddr4.rs  saddr5.rs  wpmr.rs
pac/atsam3x4c/src/efc1/: fmr.rs
pac/atsam3x4c/src/emac/: ale.rs  cse.rs  dtf.rs  ele.rs  fcse.rs  hrt.rs  lcol.rs  mcf.rs  pfr.rs  rbqp.rs  rja.rs  sa3t.rs  sa4t.rs  tid.rs  usf.rs
pac/atsam3x4c/src/hsmci/: cfg.rs  dma.rs  sdcr.rs
pac/atsam3x4c/src/matrix/: matrix_pras4.rs  matrix_pras8.rs
pac/atsam3x4c/src/pmc/: pmc_pcr.rs  pmc_usb.rs
pac/atsam3x4c/src/pwm/: cdty5.rs  cmpm1.rs  cmpm2.rs  cmpm6.rs  cmpv0.rs  cmpv6.rs  cmpv7.rs  cprd2.rs  cprd4.rs  cprd7.rs  dt1.rs  dt5.rs  dt7.rs  fmr.rs  fpe2.rs  oov.rs  smmr.rs
pac/atsam3x4c/src/spi0/: wpmr.rs
pac/atsam3x4c/src/ssc/: cmr.rs  tcmr.rs  wpmr.rs
pac/atsam3x4c/src/supc/: cr.rs
pac/atsam3x4c/src/tc0/: cmr1_wave_eq_1.rs  fmr.rs
pac/atsam3x4c/src/tc1/: cmr2.rs  rb2.rs  smmr2.rs
pac/atsam3x4c/src/twi0/: smr.rs
pac/atsam3x4c/src/uart/: brgr.rs  mr.rs  tpr.rs
pac/atsam3x4c/src/uotghs/: ctrl.rs  devdmaaddress1.rs  devdmaaddress6.rs  devdmaaddress7.rs  devdmacontrol3.rs  devdmacontrol7.rs  devdmanxtdsc1.rs  devdmastatus2.rs  devdmastatus4.rs  devdmastatus7.rs  devept.rs  hstaddr3.rs  hstdmaaddress1.rs  hstdmaaddress7.rs  hstdmacontrol1.rs  hstdmacontrol2.rs  hstpip.rs  (+9 more)
pac/atsam3x4e/: Cargo.toml  README.md
pac/atsam3x4e/src/: lib.rs
pac/atsam3x8c/: Cargo.toml  README.md  device.x
pac/atsam3x8c/src/: lib.rs
pac/atsam3x8c/src/adc/: acr.rs
pac/atsam3x8c/src/dmac/: gcfg.rs
pac/atsam3x8c/src/emac/: ncr.rs  sa1t.rs  sa3b.rs  tsr.rs
pac/atsam3x8c/src/matrix/: matrix_wpmr.rs
pac/atsam3x8c/src/pmc/: pmc_mckr.rs
pac/atsam3x8c/src/pwm/: cmpm0.rs  cmpv4.rs  dt2.rs  os.rs
pac/atsam3x8c/src/rtc/: calalr.rs  mr.rs  timalr.rs
pac/atsam3x8c/src/uotghs/: devdmacontrol1.rs  devdmastatus6.rs  hstaddr1.rs  hstaddr2.rs  hstdmacontrol6.rs
pac/atsam3x8e/: Cargo.toml  README.md
pac/atsam3x8h/: Cargo.toml  README.md  device.x
pac/atsam3x8h/src/: lib.rs  sdramc.rs
pac/templates/: Cargo.toml.template  README.md.template
src/: lib.rs
src/adc/: cgr.rs  cwr.rs  mr.rs  seqr1.rs  seqr2.rs  wpmr.rs
src/can0/: mam1.rs  mam5.rs  mam6.rs  mdl5.rs  mdl7.rs  mid1.rs  mid3.rs  mid4.rs  mid6.rs  mmr3.rs  mmr4.rs
src/can1/: mam2.rs  mam7.rs  mdh0.rs  mdh7.rs  mdl4.rs  mid2.rs
src/dacc/: acr.rs  mr.rs  ptcr.rs
src/dmac/: cfg3.rs  cfg4.rs  cfg5.rs  creq.rs  ctrla0.rs  ctrla3.rs  ctrla5.rs  ctrlb4.rs  daddr0.rs  daddr1.rs  dscr2.rs  dscr4.rs  en.rs  saddr2.rs
src/emac/: ncfgr.rs  rov.rs  rse.rs  rsr.rs  sa1b.rs  sa2b.rs  sa4b.rs  scf.rs  ste.rs  tbqp.rs  tund.rs  usrio.rs
src/hsmci/: argr.rs  blkr.rs  dtor.rs  mr.rs
src/matrix/: ccfg_sysio.rs  matrix_mrcr.rs  matrix_pras0.rs
src/piob/: absr.rs
src/pioc/: wpmr.rs
src/pmc/: ckgr_uckr.rs
src/pwm/: cdty0.rs  cdty1.rs  cdty2.rs  cdty4.rs  cmpm5.rs  cmpv1.rs  cmpv3.rs  cmpv5.rs  cmr2.rs  cmr3.rs  cmr4.rs  cmr5.rs  cprd5.rs  cprd6.rs  dt0.rs  dt6.rs  fpe1.rs  fpv.rs  scuc.rs  scupupd.rs
src/rstc/: mr.rs
src/rtc/: timr.rs
src/rtt/: ar.rs
src/smc/: bank.rs  cycle0.rs  cycle3.rs  cycle4.rs  cycle5.rs  ier.rs  mode0.rs  mode5.rs  pulse0.rs  setup0.rs  setup1.rs  setup3.rs  setup6.rs  timings1.rs  timings4.rs  timings5.rs  timings7.rs  wpcr.rs
src/spi0/: mr.rs
src/ssc/: rfmr.rs  tfmr.rs
src/supc/: smmr.rs  wuir.rs
src/tc0/: rb1.rs  wpmr.rs
src/tc1/: cmr0.rs  cmr0_wave_eq_1.rs  ra1.rs
src/twi0/: iadr.rs  rncr.rs
src/uotghs/: devctrl.rs  devdmaaddress2.rs  devdmaaddress4.rs  devdmanxtdsc2.rs  devdmanxtdsc4.rs  devdmanxtdsc5.rs  devdmastatus1.rs  hstctrl.rs  hstdmaaddress2.rs  hstdmaaddress4.rs  hstdmaaddress5.rs  hstdmaaddress6.rs  hstdmacontrol3.rs  hstdmanxtdsc2.rs  hstdmanxtdsc3.rs  hstdmanxtdsc5.rs  hstdmanxtdsc6.rs  hstdmastatus3.rs  hstdmastatus5.rs
src/usart0/: rcr.rs  rnpr.rs  tncr.rs  ttgr.rs  wpmr.rs
src/usart2/: fidi.rs  man.rs  rpr.rs
src/usart3/: tnpr.rs
(+116 files in other folders)
