[package]
name = "atsam3x8e"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Register mappings for the Atmel sam3x8e family of ARM microcontrollers"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["arm", "cortex-m", "svd2rust"]
edition = "2018"

[dependencies]
bare-metal = "0.2"
cortex-m = "0.5"
vcell = "0.1"

[dependencies.cortex-m-rt]
optional = true
version = "0.6"

[features]
rt = ["cortex-m-rt/device"]
