[package]
edition = "2018"
name = "atsam3xa-hal"
version = "0.1.0"
description = "HAL and Peripheral access API for ATSAM3X microcontrollers"
authors = ["Will Page <compenguy@gmail.com>"]
license = "BSD0 AND (MIT OR Apache-2.0)"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "sam3x", "atsam3x", "sam3a", "atsam3a"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/compenguy/atsam3xa.git"
readme = "README.md"

[dependencies]
cortex-m = "~0.6"
# embedded-hal API breakage is happening within the 1.0.0-alpha versions
# latest git has what we want
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git" }
nb = "~0.1"
paste = "~1.0"
atsam3a4c = { version = "", path = "../pac/atsam3a4c", optional = true }
atsam3a8c = { version = "", path = "../pac/atsam3a8c", optional = true }
atsam3x4c = { version = "", path = "../pac/atsam3x4c", optional = true }
atsam3x4e = { version = "", path = "../pac/atsam3x4e", optional = true }
atsam3x8c = { version = "", path = "../pac/atsam3x8c", optional = true }
atsam3x8e = { version = "", path = "../pac/atsam3x8e", optional = true }
atsam3x8h = { version = "", path = "../pac/atsam3x8h", optional = true }

[features]
atsam3a4c-rt = ["atsam3a4c/rt"]
atsam3a8c-rt = ["atsam3a8c/rt"]
atsam3x4c-rt = ["atsam3x4c/rt"]
atsam3x4e-rt = ["atsam3x4e/rt"]
atsam3x8c-rt = ["atsam3x8c/rt"]
atsam3x8e-rt = ["atsam3x8e/rt"]
atsam3x8h-rt = ["atsam3x8h/rt"]
