[package]
edition = "2018"
name = "atsam3xa-hal"
version = "0.1.0"
description = "HAL and Peripheral access API for ATSAM3X microcontrollers"
authors = ["Will Page <compenguy@gmail.com>"]
license = "BSD0 AND (MIT OR Apache-2.0)"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "sam3x", "atsam3x", "sam3a", "atsam3a"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/compenguy/atsam3xa.git"
readme = "README.md"

[dependencies]
cortex-m = "~0.6"
atsam3a4c = { version = "", path = "../pac/atsam3a4c", optional = true }
atsam3a8c = { version = "", path = "../pac/atsam3a8c", optional = true }
atsam3x4c = { version = "", path = "../pac/atsam3x4c", optional = true }
atsam3x4e = { version = "", path = "../pac/atsam3x4e", optional = true }
atsam3x8c = { version = "", path = "../pac/atsam3x8c", optional = true }
atsam3x8e = { version = "", path = "../pac/atsam3x8e", optional = true }
atsam3x8h = { version = "", path = "../pac/atsam3x8h", optional = true }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git" }
nb = "~0.1"
paste = "~1.0"
usb-host = {version = "~0.1", optional = true}
usb-device = {version = "~0.2", optional = true}
starb  = {version = "~0.3", optional = true}

[features]
sam3a = [] # feature for shared traits between sam3a4c, sam3a8c
sam3x = [] # feature for shared traits between sam3x4c, sam3x8c, sam3x4e, sam3x8e, sam3x8h
sam3_4 = [] # feature for shared traits between sam3a4c, sam3x4c, sam3x4e
sam3_8 = [] # feature for shared traits between sam3a8c, sam3x8c, sam3x8e, sam3x8h
sam3_c = [] # feature for shared traits between sam3a4c, sam3a8c, sam3x4c, sam3x8c
sam3_e = [] # feature for shared traits between sam3x4e, sam3x8e
sam3a4c = ["atsam3a4c", "sam3a", "sam3_4", "sam3_c"]
sam3a4c-rt = ["atsam3a4c/rt", "sam3a4c"]
sam3a8c = ["atsam3a8c", "sam3a", "sam3_8", "sam3_c"]
sam3a8c-rt = ["atsam3a8c/rt", "sam3a8c"]
sam3x4c = ["atsam3x4c", "sam3x", "sam3_4", "sam3_c"]
sam3x4c-rt = ["atsam3x4c/rt", "sam3x4c"]
sam3x4e = ["atsam3x4e", "sam3x", "sam3_4", "sam3_e"]
sam3x4e-rt = ["atsam3x4e/rt", "sam3x4e"]
sam3x8c = ["atsam3x8c", "sam3x", "sam3_8", "sam3_c"]
sam3x8c-rt = ["atsam3x8c/rt", "sam3x8c"]
sam3x8e = ["atsam3x8e", "sam3x", "sam3_8", "sam3_e"]
sam3x8e-rt = ["atsam3x8e/rt", "sam3x8e"]
sam3x8h = ["atsam3x8h", "sam3x", "sam3_8"]
sam3x8h-rt = ["atsam3x8h/rt", "sam3x8h"]
usb = ["usb-host", "usb-device", "starb"]
