[package]
edition = "2018"
name = "arduino_due"
version = "0.2.0"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Board Support crate for the Arduino Due"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino", "due"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compenguy/atsam3xa"
readme = "README.md"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
paste = "1.0"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.panic-halt]
version = "~0.2"
optional = true

[dependencies.atsam3xa-hal]
path = "../../hal"
version = "~0.1"
default-features = false
features = ["sam3x8e"]


[features]
# ask the HAL to enable atsamd3x8e support
default = ["rt", "panic_halt", "atsam3xa-hal/sam3x8e", "sam3x8e"]
rt = ["cortex-m-rt", "atsam3xa-hal/sam3x8e-rt"]
# Puts a breakpoint on `rust_begin_unwind` to catch panics
panic_halt = ["panic-halt"]
sam3x8e = ["sam3_e"]
sam3_e = []

[[example]]
name = "blinky_basic"

